Delete comments, fix some spacing

--- a/books/rulesets/statistics.less
+++ b/books/rulesets/statistics.less
@@ -21,13 +21,6 @@ body {
   }
 }
 
-//numbering
-div[data-type='chapter'] {
-  .formula-review, .practice, .references {
-    //.x-numb ();
-  }
-}
-
 div[data-type='chapter'] {
   .glossary("Key Terms");
 
@@ -35,7 +28,7 @@ div[data-type='chapter'] {
 
   section.formula-review {
     move-to: eoc-formula-review;
-     > h1[data-type="title"] {
+    > h1[data-type="title"] {
       move-to: trash;
     }
     &::before {
@@ -47,16 +40,15 @@ div[data-type='chapter'] {
     class: "eoc formula-review-container";
     data-type: composite-page;
     container: div;
-    //move-to: eoc-all;
   }
 
   section.practice {
     move-to: eoc-practice;
     content: nodes(sectionTitle) content();
-     > h1[data-type="title"] {
+    > h1[data-type="title"] {
       move-to: trash;
     }
-    div[data-type="solution"]  {
+    div[data-type="solution"] {
       move-to: eoc-solutions;
       pass: @pass-25-solutions;
     }
@@ -66,14 +58,13 @@ div[data-type='chapter'] {
     class: "eoc practice-container";
     data-type: composite-page;
     container: div;
-    //move-to: eoc-all;
   }
   section.bring-together-exercises {
     move-to: eoc-bring-together-exercises;
-     > h1[data-type="title"] {
+    > h1[data-type="title"] {
       move-to: trash;
     }
-    div[data-type="solution"]  {
+    div[data-type="solution"] {
       move-to: eoc-solutions;
       pass: @pass-25-solutions;
     }
@@ -83,7 +74,6 @@ div[data-type='chapter'] {
     class: "eoc bring-together-exercises-container";
     data-type: composite-page;
     container: div;
-    //move-to: eoc-all;
   }
   section.free-response {
     move-to: eoc-free-response;
@@ -93,7 +83,7 @@ div[data-type='chapter'] {
     &::before {
       content: nodes(sectionTitle);
     }
-    div[data-type="solution"]  {
+    div[data-type="solution"] {
       move-to: eoc-solutions;
       pass: @pass-25-solutions;
     }
@@ -103,7 +93,6 @@ div[data-type='chapter'] {
     class: "eoc free-response-container";
     container: div;
    data-type: composite-page;
-   // move-to: eoc-all;
   }
 
 
@@ -112,7 +101,7 @@ div[data-type='chapter'] {
      > h1[data-type="title"] {
       move-to: trash;
     }
-    div[data-type="solution"]  {
+    div[data-type="solution"] {
       move-to: eoc-solutions;
       pass: @pass-25-solutions;
     }
@@ -122,7 +111,6 @@ div[data-type='chapter'] {
     class: "eoc bring-together-homework-container";
     data-type: composite-page;
     container: div;
-    //move-to: eoc-all;
   }
   .try {
     div[data-type="solution"] {
@@ -145,7 +133,6 @@ div[data-type='chapter'] {
     class: "eoc references-container";
     data-type: composite-page;
     container: div;
-   // move-to: eoc-all;
   }
 
   &::after {
